--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/react-app/main.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
+
   </body>
 </html>
